# fluidmetronome

./: .firebaserc  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  Trunk.toml  build.sh  deploy-firebase.sh  deploy.sh  firebase.json  firestore.rules  index.html  package-lock.json  package.json  serve.sh
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: firebase-hosting.yml
docs/: architecture.md  build-plan.md  firebase-cicd.md  vscode-handoff.md
js/: audio-engine.js  audio-worklet.js  firebase.js  sw-register.js
scripts/: make-touch-icon.mjs
src/: app.rs  file_io.rs  main.rs
src/audio/: pattern.rs  playback.rs
static/: app.css  firebase-config.js  manifest.webmanifest  sw.js
tests/audio/: modulator-direction.mjs  preset-levels.mjs  transport-lifecycle.mjs  worklet-stall.mjs
tests/browser/: column-menu.mjs  export-scope.mjs  layout.mjs  modulator-mute.mjs  modulator-shape.mjs  pattern-io.mjs  pattern-stats.mjs  rename.mjs  server.mjs  ticks-input.mjs  transport-button-stop.mjs  transport-recovery.mjs
