[package]
name = "fluidmetronome"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = { version = "0.11", features = ["timers", "utils"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "console",
  "DomRect",
  "Element",
  "File",
  "FileList",
  "HtmlInputElement",
  "HtmlSelectElement",
  "Navigator",
  "PointerEvent",
  "Storage",
  "ServiceWorkerContainer",
  "Window",
] }
yew = { version = "0.21", features = ["csr"] }
